eu traduzir o readme e coloquei mas personalidade nos comentarios